--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jwt-simple": "^0.5.6",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
